feat: Update to 2.0.0, improve GUI config/HUD editor, and fix localization