@@ -7,8 +7,12 @@ import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.DrawContext;
 import net.minecraft.client.gui.Element;
 import net.minecraft.client.gui.Selectable;
+import net.minecraft.client.gui.Click;
 import net.minecraft.client.gui.screen.Screen;
-import net.minecraft.client.gui.widget.ButtonWidget;
+import net.minecraft.client.input.KeyInput;
+import net.minecraft.client.input.CharInput;
+import net.minecraft.client.gui.widget.ClickableWidget;
+import net.minecraft.client.gui.screen.narration.NarrationMessageBuilder;
 import net.minecraft.client.gui.widget.ElementListWidget;
 import net.minecraft.client.gui.widget.SliderWidget;
 import net.minecraft.client.gui.widget.TextFieldWidget;
@@ -26,6 +30,9 @@ import java.util.function.Consumer;
 
 import net.minecraft.text.MutableText;
 import net.minecraft.util.Formatting;
+import net.minecraft.client.sound.PositionedSoundInstance;
+import net.minecraft.sound.SoundEvents;
+import net.minecraft.client.sound.SoundInstance;
 
 public class DamageConfigScreen extends Screen {
     private final Screen parent;
@@ -50,59 +57,163 @@ public class DamageConfigScreen extends Screen {
     
     private boolean isBinding = false;
 
+    private static long handCursor = 0;
+    private static long arrowCursor = 0;
+    private static long ibeamCursor = 0;
+    private static long vResizeCursor = 0;
+    private static long hResizeCursor = 0;
+
     public DamageConfigScreen(Screen parent) {
         super(Text.translatable("title.damage-engine.config"));
         this.parent = parent;
         this.config = DamageEngineConfig.getInstance();
     }
 
-    private final List<ButtonWidget> footerButtons = new ArrayList<>();
+    private final List<StyledButton> footerButtons = new ArrayList<>();
 
-    private static class TextButtonWidget extends ButtonWidget {
-        private final int defaultColor;
+    private static class PlainTextButton extends ClickableWidget {
+        private final Runnable onPress;
         private final int hoverColor;
+        private final int defaultColor;
+        private boolean forceHover = false;
 
-        public TextButtonWidget(int x, int y, int width, int height, Text message, PressAction onPress, int defaultColor, int hoverColor) {
-            super(x, y, width, height, message, onPress, DEFAULT_NARRATION_SUPPLIER);
+        public PlainTextButton(int x, int y, int width, int height, Text message, Runnable onPress, int defaultColor, int hoverColor) {
+            super(x, y, width, height, message);
+            this.onPress = onPress;
             this.defaultColor = defaultColor;
             this.hoverColor = hoverColor;
         }
+        
+        public void setForceHover(boolean forceHover) {
+            this.forceHover = forceHover;
+        }
 
         @Override
-        public void renderWidget(DrawContext context, int mouseX, int mouseY, float delta) {
-            int color = (this.isHovered() || this.isSelected()) ? hoverColor : defaultColor;
-            context.drawCenteredTextWithShadow(MinecraftClient.getInstance().textRenderer, this.getMessage(), this.getX() + this.width / 2, this.getY() + (this.height - 8) / 2, color);
+        public boolean mouseClicked(Click click, boolean modifiers) {
+            if (this.active && this.visible && click.button() == 0) {
+                 double mouseX = MinecraftClient.getInstance().mouse.getX() * (double)MinecraftClient.getInstance().getWindow().getScaledWidth() / (double)MinecraftClient.getInstance().getWindow().getWidth();
+                 double mouseY = MinecraftClient.getInstance().mouse.getY() * (double)MinecraftClient.getInstance().getWindow().getScaledHeight() / (double)MinecraftClient.getInstance().getWindow().getHeight();
+                 
+                 if (this.isMouseOver(mouseX, mouseY)) {
+                    this.playDownSound(MinecraftClient.getInstance().getSoundManager());
+                    this.onPress.run();
+                    return true;
+                 }
+            }
+            return false;
+        }
+
+        @Override
+        protected void renderWidget(DrawContext context, int mouseX, int mouseY, float delta) {
+            int color = (isHovered() || forceHover) ? hoverColor : defaultColor;
+            context.drawCenteredTextWithShadow(MinecraftClient.getInstance().textRenderer, getMessage(), getX() + getWidth() / 2, getY() + (getHeight() - 8) / 2, color);
+        }
+
+        @Override
+        protected void appendClickableNarrations(NarrationMessageBuilder builder) {
+            this.appendDefaultNarrations(builder);
+        }
+        @Override
+        public void playDownSound(net.minecraft.client.sound.SoundManager soundManager) {
+            if (MinecraftClient.getInstance().currentScreen instanceof DamageConfigScreen s) {
+                s.playClickSound();
+            } else {
+                super.playDownSound(soundManager);
+            }
+        }
+    }
+    
+    static class StyledButton extends ClickableWidget {
+        private final Runnable onPress;
+
+        public StyledButton(int x, int y, int width, int height, Text message, Runnable onPress) {
+            super(x, y, width, height, message);
+            this.onPress = onPress;
+        }
+        
+        @Override
+        public void playDownSound(net.minecraft.client.sound.SoundManager soundManager) {
+            if (MinecraftClient.getInstance().currentScreen instanceof DamageConfigScreen s) {
+                s.playClickSound();
+            } else if (MinecraftClient.getInstance().currentScreen instanceof HudEditorScreen s) {
+                s.playClickSound();
+            } else {
+                super.playDownSound(soundManager);
+            }
+        }
+        
+        @Override
+        public boolean mouseClicked(Click click, boolean modifiers) {
+            if (this.active && this.visible && click.button() == 0) {
+                 double mouseX = MinecraftClient.getInstance().mouse.getX() * (double)MinecraftClient.getInstance().getWindow().getScaledWidth() / (double)MinecraftClient.getInstance().getWindow().getWidth();
+                 double mouseY = MinecraftClient.getInstance().mouse.getY() * (double)MinecraftClient.getInstance().getWindow().getScaledHeight() / (double)MinecraftClient.getInstance().getWindow().getHeight();
+                 
+                 if (this.isMouseOver(mouseX, mouseY)) {
+                    this.playDownSound(MinecraftClient.getInstance().getSoundManager());
+                    this.onPress.run();
+                    return true;
+                 }
+            }
+            return false;
+        }
+        
+        @Override
+        protected void renderWidget(DrawContext context, int mouseX, int mouseY, float delta) {
+            context.fill(getX(), getY(), getX() + getWidth(), getY() + getHeight(), 0x20000000);
+            
+            int borderColor = isHovered() ? 0xFFFFFFFF : 0xFFA0A0A0;
+            int x = getX(); int y = getY(); int w = getWidth(); int h = getHeight();
+            context.fill(x, y, x + w, y + 1, borderColor); 
+            context.fill(x, y + h - 1, x + w, y + h, borderColor); 
+            context.fill(x, y, x + 1, y + h, borderColor); 
+            context.fill(x + w - 1, y, x + w, y + h, borderColor); 
+            
+            context.drawCenteredTextWithShadow(MinecraftClient.getInstance().textRenderer, getMessage(), getX() + getWidth() / 2, getY() + (getHeight() - 8) / 2, 0xFFFFFFFF);
+        }
+
+        @Override
+        protected void appendClickableNarrations(NarrationMessageBuilder builder) {
+            this.appendDefaultNarrations(builder);
         }
     }
 
     @Override
     protected void init() {
+        if (handCursor == 0) handCursor = GLFW.glfwCreateStandardCursor(GLFW.GLFW_HAND_CURSOR);
+        if (arrowCursor == 0) arrowCursor = GLFW.glfwCreateStandardCursor(GLFW.GLFW_ARROW_CURSOR);
+        if (ibeamCursor == 0) ibeamCursor = GLFW.glfwCreateStandardCursor(GLFW.GLFW_IBEAM_CURSOR);
+        if (vResizeCursor == 0) vResizeCursor = GLFW.glfwCreateStandardCursor(GLFW.GLFW_VRESIZE_CURSOR);
+        if (hResizeCursor == 0) hResizeCursor = GLFW.glfwCreateStandardCursor(GLFW.GLFW_HRESIZE_CURSOR);
+
         try {
-            if (optionList != null) lastOptionScroll = optionList.getScrollAmount();
-            if (categoryList != null) lastCategoryScroll = categoryList.getScrollAmount();
+            if (optionList != null) lastOptionScroll = optionList.getScrollY();
+            if (categoryList != null) lastCategoryScroll = categoryList.getScrollY();
 
             this.clearChildren();
             categories.clear();
             footerButtons.clear();
             
             int footerHeight = 40;
-            int headerHeight = 30;
+            int headerHeight = 0; 
             int leftWidth = 120;
-            int footerY = this.height - 30;
+            int footerY = this.height - 35;
+            int topY = 0; 
             
             int listHeight = footerY; 
             
-            categoryList = new CategoryListWidget(this.client, leftWidth, listHeight, headerHeight, 25);
-            categoryList.setLeftPos(0);
+            categoryList = new CategoryListWidget(this.client, leftWidth, listHeight, topY, 25);
+            categoryList.setX(0);
             
-            optionList = new ConfigOptionListWidget(this.client, this.width - leftWidth, listHeight, 0, 26);
-            optionList.setLeftPos(leftWidth);
+            categoryList.addEntryPublic(new CategorySpacerEntry(this)); 
+            
+            optionList = new ConfigOptionListWidget(this.client, this.width - leftWidth, listHeight, topY, 26);
+            optionList.setX(leftWidth);
             
             initCategories();
             initOptionEntries();
             
-            if (categoryList != null) categoryList.setScrollAmount(lastCategoryScroll);
-            if (optionList != null) optionList.setScrollAmount(lastOptionScroll);
+            if (categoryList != null) categoryList.setScrollY(lastCategoryScroll);
+            if (optionList != null) optionList.setScrollY(lastOptionScroll);
             
             this.addDrawableChild(categoryList);
             this.addDrawableChild(optionList);
@@ -110,28 +221,31 @@ public class DamageConfigScreen extends Screen {
             int buttonWidth = 80;
             int buttonY = footerY + 5;
             
-            ButtonWidget saveBtn = ButtonWidget.builder(Text.translatable("button.damage-engine.save_close").withColor(0xFFB7F3C8), b -> {
+            StyledButton saveBtn = new StyledButton(this.width - buttonWidth - 10, buttonY, buttonWidth, 20, Text.translatable("button.damage-engine.save_close").withColor(0xFFB7F3C8), () -> {
                 config.save();
+                GLFW.glfwSetCursor(client.getWindow().getHandle(), arrowCursor);
                 this.client.setScreen(parent);
-            }).dimensions(this.width - buttonWidth - 10, buttonY, buttonWidth, 20).build();
+            });
             footerButtons.add(saveBtn);
-            this.addSelectableChild(saveBtn);
+            this.addDrawableChild(saveBtn);
             
-            ButtonWidget cancelBtn = ButtonWidget.builder(Text.translatable("gui.cancel"), b -> {
+            StyledButton cancelBtn = new StyledButton(this.width - buttonWidth * 2 - 20, buttonY, buttonWidth, 20, Text.translatable("gui.cancel").withColor(0xFFFC887E), () -> {
                 config.load();
+                GLFW.glfwSetCursor(client.getWindow().getHandle(), arrowCursor);
                 this.client.setScreen(parent);
-            }).dimensions(this.width - buttonWidth * 2 - 20, buttonY, buttonWidth, 20).build();
+            });
             footerButtons.add(cancelBtn);
-            this.addSelectableChild(cancelBtn);
+            this.addDrawableChild(cancelBtn);
             
             int onColor = 0xFFB5F0C6;
             int offColor = 0xFFFC887E;
-            ButtonWidget previewBtn = ButtonWidget.builder(Text.translatable("text.damage-engine.preview").append(": ").append(Text.literal(previewEnabled ? "ON" : "OFF").withColor(previewEnabled ? onColor : offColor)), b -> {
+            final StyledButton[] previewBtnRef = new StyledButton[1];
+            previewBtnRef[0] = new StyledButton(10, buttonY, 80, 20, Text.translatable("text.damage-engine.preview").append(": ").append(Text.literal(previewEnabled ? "ON" : "OFF").withColor(previewEnabled ? onColor : offColor)), () -> {
                 previewEnabled = !previewEnabled;
-                b.setMessage(Text.translatable("text.damage-engine.preview").append(": ").append(Text.literal(previewEnabled ? "ON" : "OFF").withColor(previewEnabled ? onColor : offColor)));
-            }).dimensions(10, buttonY, 80, 20).build();
-            footerButtons.add(previewBtn);
-            this.addSelectableChild(previewBtn);
+                previewBtnRef[0].setMessage(Text.translatable("text.damage-engine.preview").append(": ").append(Text.literal(previewEnabled ? "ON" : "OFF").withColor(previewEnabled ? onColor : offColor)));
+            });
+            footerButtons.add(previewBtnRef[0]);
+            this.addDrawableChild(previewBtnRef[0]);
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -139,15 +253,17 @@ public class DamageConfigScreen extends Screen {
     
     private void refreshOptions() {
         if (optionList == null) return;
-        double scroll = optionList.getScrollAmount();
+        double scroll = optionList.getScrollY();
         optionList.clearEntriesPublic();
         initOptionEntries();
-        optionList.setScrollAmount(scroll);
+        optionList.setScrollY(scroll);
     }
     
     private void initCategories() {
         categories.clear();
         categoryList.clearEntriesPublic();
+        
+        categoryList.addEntryPublic(new CategorySpacerEntry(this)); 
         
         addCategory("category.damage_engine.general", 0);
         addCategory("category.damage_engine.appearance", 1);
@@ -165,6 +281,7 @@ public class DamageConfigScreen extends Screen {
         
         addHeader("category.damage_engine.appearance");
         addOption(new ButtonActionEntry("option.damage-engine.edit_pos_label", "button.damage-engine.adjust", () -> {
+            playClickSound();
             this.client.setScreen(new HudEditorScreen(this));
         }));
         
@@ -200,9 +317,12 @@ public class DamageConfigScreen extends Screen {
         
         addHeader("category.damage_engine.keybinds");
         
-        addOption(new KeybindEntry("key.damage_engine.config", DamageEngineClient.configKeyBinding));
-        addOption(new KeybindEntry("key.damage_engine.toggle_hud", DamageEngineClient.toggleHudKeyBinding));
-        
+        if (DamageEngineClient.configKeyBinding != null) {
+            addOption(new KeybindEntry("key.damage_engine.config", DamageEngineClient.configKeyBinding));
+        }
+        if (DamageEngineClient.toggleHudKeyBinding != null) {
+            addOption(new KeybindEntry("key.damage_engine.toggle_hud", DamageEngineClient.toggleHudKeyBinding));
+        }
         
         addHeader("category.damage_engine.other");
         addOption(new BooleanOptionEntry("option.damage-engine.hideOnF1", config.hideOnF1, v -> config.hideOnF1 = v));
@@ -210,9 +330,6 @@ public class DamageConfigScreen extends Screen {
         
         addOption(new ResetButtonEntry("option.damage-engine.reset", () -> {
             config.resetToDefaults();
-
-            DamageEngineClient.configKeyBinding.setBoundKey(InputUtil.Type.KEYSYM.createFromCode(GLFW.GLFW_KEY_UNKNOWN));
-            DamageEngineClient.toggleHudKeyBinding.setBoundKey(InputUtil.Type.KEYSYM.createFromCode(GLFW.GLFW_KEY_UNKNOWN));
             KeyBinding.updateKeysByCode();
             this.client.options.write();
             
@@ -265,7 +382,7 @@ public class DamageConfigScreen extends Screen {
         if (isNavigating) return;
         if (optionList == null || categories.isEmpty()) return;
         
-        double scroll = optionList.getScrollAmount();
+        double scroll = optionList.getScrollY();
         
         int currentBest = 0;
         for (int i = 0; i < categories.size(); i++) {
@@ -285,86 +402,209 @@ public class DamageConfigScreen extends Screen {
     public void setBinding(boolean binding) {
         this.isBinding = binding;
     }
-
-    @Override
-    public boolean keyPressed(int keyCode, int scanCode, int modifiers) {
-        if (isBinding) {
-            if (this.getFocused() != null && this.getFocused().keyPressed(keyCode, scanCode, modifiers)) {
-                return true;
-            }
-            
-            if (keyCode == GLFW.GLFW_KEY_ESCAPE) {
-                return true;
-            }
-            
-            return true;
+    
+    public void playClickSound() {
+        try {
+             PositionedSoundInstance sound = PositionedSoundInstance.ambient(SoundEvents.UI_BUTTON_CLICK.value());
+             
+             try {
+                 java.lang.reflect.Field volField = net.minecraft.client.sound.AbstractSoundInstance.class.getDeclaredField("volume");
+                 volField.setAccessible(true);
+                 volField.setFloat(sound, 0.25F);
+             } catch (Exception ignored) {
+             }
+             
+             MinecraftClient.getInstance().getSoundManager().play(sound);
+        } catch (Exception e) {
+             DamageEngineClient.LOGGER.error("Failed to play sound", e);
         }
-        
-        if (super.keyPressed(keyCode, scanCode, modifiers)) {
-            return true;
-        }
-        
-        return false;
     }
 
-    @Override
-    public boolean mouseClicked(double mouseX, double mouseY, int button) {
-        for (ButtonWidget btn : footerButtons) {
-            if (btn.mouseClicked(mouseX, mouseY, button)) return true;
+        @Override
+        public boolean keyPressed(KeyInput keyInput) {
+            int keyCode = keyInput.key();
+            int scanCode = keyInput.scancode();
+            int modifiers = keyInput.modifiers();
+            
+            if (isBinding) {
+                if (optionList != null) {
+                    for (OptionEntry entry : optionList.children()) {
+                        if (entry instanceof KeybindEntry ke) {
+                            if (ke.isBinding()) {
+                                if (ke.button.keyPressed(keyCode, scanCode, modifiers)) {
+                                    return true;
+                                }
+                            }
+                        }
+                    }
+                }
+                if (keyCode == GLFW.GLFW_KEY_ESCAPE) {
+                    setBinding(false);
+                    return true;
+                }
+            }
+            return super.keyPressed(keyInput);
         }
-        return super.mouseClicked(mouseX, mouseY, button);
-    }
 
     @Override
-    public void render(DrawContext context, int mouseX, int mouseY, float delta) {
-        super.render(context, mouseX, mouseY, delta);
-        
+    public boolean mouseClicked(Click click, boolean modifiers) {
         if (optionList != null) {
-            if (!isNavigating) {
-                int hoveredIndex = optionList.getHoveredEntryIndex(mouseX, mouseY);
-                if (hoveredIndex != -1) {
-                     int bestCatId = -1;
-                     for (CategoryEntry cat : categories) {
-                         if (cat.targetIndex <= hoveredIndex) {
-                             bestCatId = cat.id;
-                         } else {
-                             break;
-                         }
-                     }
-                     if (bestCatId != -1) {
-                         selectedCategoryIndex = bestCatId;
-                     }
+            for (OptionEntry entry : optionList.children()) {
+                for (Element child : entry.children()) {
+                    if (child instanceof TextFieldWidget tf) {
+                        tf.setFocused(false);
+                    }
                 }
             }
         }
         
-        if (optionList != null) optionList.updateSmoothScroll(delta);
+        if (isBinding) {
+             if (optionList != null) {
+                 for (OptionEntry entry : optionList.children()) {
+                     if (entry instanceof KeybindEntry ke && ke.isBinding()) {
+                         ke.bindMouse(click.button());
+                         return true;
+                     }
+                 }
+             }
+             setBinding(false);
+             return true;
+         }
+        return super.mouseClicked(click, modifiers);
+    }
+
+    @Override
+    public void close() {
+        GLFW.glfwSetCursor(client.getWindow().getHandle(), arrowCursor);
+        super.close();
+    }
+    
+    @Override
+    public void render(DrawContext context, int mouseX, int mouseY, float delta) {
+        context.fill(0, 0, this.width, this.height, 0x40000000); 
+        
+        if (categoryList != null) categoryList.render(context, mouseX, mouseY, delta);
+        if (optionList != null) {
+            optionList.render(context, mouseX, mouseY, delta);
+            optionList.updateSmoothScroll(delta);
+        }
+        
+        if (optionList != null && !isNavigating) {
+            int hoveredIndex = optionList.getHoveredEntryIndex(mouseX, mouseY);
+            if (hoveredIndex != -1) {
+                 int bestCatId = -1;
+                 for (CategoryEntry cat : categories) {
+                     if (cat.targetIndex <= hoveredIndex) {
+                         bestCatId = cat.id;
+                     } else {
+                         break;
+                     }
+                 }
+                 if (bestCatId != -1) {
+                     selectedCategoryIndex = bestCatId;
+                 }
+            }
+        }
         
         int leftWidth = 120;
-        int footerY = this.height - 30;
+        int footerY = this.height - 35;
         
         context.fill(leftWidth - 1, 0, leftWidth, footerY, 0xFF555555);
-        
         context.fill(0, footerY - 1, this.width, footerY, 0xFF555555);
-
+        
         context.fill(0, 25, leftWidth, 26, 0xFF555555);
         
-        context.getMatrices().push();
-        context.getMatrices().translate(0, 0, 200);
-        
-        for (ButtonWidget btn : footerButtons) {
+        for (StyledButton btn : footerButtons) {
             btn.render(context, mouseX, mouseY, delta);
         }
-        context.getMatrices().pop();
         
-        context.drawTextWithShadow(this.textRenderer, Text.translatable("category.damage_engine"), 10, 10, 0xFFFFFF);
+        context.drawTextWithShadow(this.textRenderer, Text.translatable("category.damage_engine"), 10, 10, 0xFFFFFFFF);
         
         if (previewEnabled) {
             new DamageHud().renderPreview(context, this.width/2, this.height/2);
         }
+        
+        updateCursor(mouseX, mouseY);
+    }
+    
+    private void updateCursor(double mouseX, double mouseY) {
+        if (client == null) return;
+        long windowHandle = client.getWindow().getHandle();
+        long cursor = arrowCursor;
+        
+        boolean found = false;
+        
+        if (optionList != null) {
+             if (optionList.isScrolling()) {
+                 cursor = vResizeCursor;
+                 found = true;
+             } else if (mouseX >= optionList.getScrollbarX() && mouseX <= optionList.getScrollbarX() + 6 && mouseY >= optionList.getY() && mouseY <= optionList.getBottom()) {
+                 cursor = handCursor;
+                 found = true;
+             }
+        }
+        
+        if (!found) {
+            for (StyledButton btn : footerButtons) {
+                if (btn.isMouseOver(mouseX, mouseY)) {
+                    cursor = handCursor;
+                    found = true;
+                    break;
+                }
+            }
+        }
+        
+        if (!found && categoryList != null && categoryList.isMouseOver(mouseX, mouseY)) {
+             int index = categoryList.getHoveredEntryIndex(mouseX, mouseY);
+             if (index != -1) {
+                 cursor = handCursor;
+                 found = true;
+             }
+        }
+        
+        if (!found && optionList != null && optionList.isMouseOver(mouseX, mouseY)) {
+             int index = optionList.getHoveredEntryIndex(mouseX, mouseY);
+             if (index != -1) {
+                 OptionEntry entry = optionList.children().get(index);
+                 if (entry instanceof BooleanOptionEntry bo) {
+                     if (bo.button.isMouseOver(mouseX, mouseY)) { cursor = handCursor; found = true; }
+                 } else if (entry instanceof ExpandableHeaderEntry) {
+                     cursor = handCursor; found = true;
+                } else if (entry instanceof AddButtonEntry abe) {
+                     if (abe.button.isMouseOver(mouseX, mouseY)) { cursor = handCursor; found = true; }
+                 } else if (entry instanceof ButtonActionEntry bae) {
+                     if (bae.button.isMouseOver(mouseX, mouseY)) { cursor = handCursor; found = true; }
+                 } else if (entry instanceof ResetButtonEntry rbe) {
+                     if (rbe.button.isMouseOver(mouseX, mouseY)) { cursor = handCursor; found = true; }
+                 } else if (entry instanceof KeybindEntry ke) {
+                     if (ke.button.isMouseOver(mouseX, mouseY)) { cursor = handCursor; found = true; }
+                 } else if (entry instanceof DamageThresholdEntry dte) {
+                     if (dte.delBtn.isMouseOver(mouseX, mouseY)) { cursor = handCursor; found = true; }
+                     else if (dte.valField.isMouseOver(mouseX, mouseY) || dte.colField.isMouseOver(mouseX, mouseY)) { cursor = ibeamCursor; found = true; }
+                 } else if (entry instanceof HexColorEntry hce) {
+                     if (hce.field.isMouseOver(mouseX, mouseY)) { cursor = ibeamCursor; found = true; }
+                 } else if (entry instanceof NumericEntry ne) {
+                     if (ne.field.isMouseOver(mouseX, mouseY)) { cursor = ibeamCursor; found = true; }
+                 } else if (entry instanceof SliderEntry se) {
+                     if (se.slider.isMouseOver(mouseX, mouseY)) { cursor = hResizeCursor; found = true; }
+                 } else if (entry instanceof IntegerSliderEntry ise) {
+                     if (ise.slider.isMouseOver(mouseX, mouseY)) { cursor = hResizeCursor; found = true; }
+                 }
+             }
+        }
+        
+        GLFW.glfwSetCursor(windowHandle, cursor);
     }
     
     
+    private static class CategorySpacerEntry extends CategoryEntry {
+        public CategorySpacerEntry(DamageConfigScreen screen) {
+            super(screen, Text.empty(), -1, -1);
+        }
+        @Override public void render(DrawContext context, int mouseX, int mouseY, boolean hovered, float delta) {}
+        @Override public boolean mouseClicked(Click click, boolean modifiers) { return false; }
+    }
+
     private static class CategoryEntry extends ElementListWidget.Entry<CategoryEntry> {
         private final Text text;
         private final int id;
@@ -380,25 +620,29 @@ public class DamageConfigScreen extends Screen {
         }
         
         @Override
-        public void render(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
-
+        public void render(DrawContext context, int mouseX, int mouseY, boolean hovered, float delta) {
+            int index = screen.categoryList.children().indexOf(this);
+            if (index == -1) return;
+            
+            int y = screen.categoryList.getRowTopPublic(index);
+            int x = screen.categoryList.getRowLeft();
             
             boolean isSelected = screen.selectedCategoryIndex == id;
             if (isSelected) {
-
-                context.fill(x, y + 2, x + 2, y + entryHeight - 2, 0xFFFFFFFF);
+                context.fill(x, y + 2, x + 2, y + 25 - 2, 0xFFFFFFFF);
             }
             int color = 0xFFFFFFFF;
 
-            context.drawTextWithShadow(client.textRenderer, text, x + 10, y + 8, color);
+            context.drawTextWithShadow(client.textRenderer, text, x + 10, y + 8, 0xFFFFFFFF);
         }
         
         @Override public List<? extends Element> children() { return Collections.emptyList(); }
         @Override public List<? extends Selectable> selectableChildren() { return Collections.emptyList(); }
         
         @Override
-        public boolean mouseClicked(double mouseX, double mouseY, int button) {
+        public boolean mouseClicked(Click click, boolean modifiers) {
             screen.selectCategory(id);
+            screen.playClickSound();
             return true;
         }
     }
@@ -406,14 +650,30 @@ public class DamageConfigScreen extends Screen {
     private class CategoryListWidget extends ElementListWidget<CategoryEntry> {
         public CategoryListWidget(MinecraftClient client, int width, int height, int y, int itemHeight) {
             super(client, width, height, y, 25);
-            this.centerListVertically = false;
+        }
+        
+        @Override
+        protected void drawMenuListBackground(DrawContext context) {
         }
         public void clearEntriesPublic() { this.clearEntries(); }
         
-        @Override
+        public int getRowTopPublic(int index) {
+            return this.getY() + index * this.itemHeight - (int)this.getScrollY();
+        }
+        
+        public int getHoveredEntryIndex(double mouseX, double mouseY) {
+             if (mouseX < this.getX() || mouseX > this.getRight() || mouseY < this.getY() || mouseY > this.getBottom()) {
+                 return -1;
+             }
+             int i = MathHelper.floor(mouseY - (double)this.getY() - 0 + this.getScrollY() - 4.0D);
+             int index = i / 25;
+             if (index >= 0 && index < this.getEntryCount()) {
+                 return index;
+             }
+             return -1;
+        }
+        
         public void renderWidget(DrawContext context, int mouseX, int mouseY, float delta) {
-
-             
              this.enableScissor(context);
              this.renderList(context, mouseX, mouseY, delta);
              context.disableScissor();
@@ -424,41 +684,148 @@ public class DamageConfigScreen extends Screen {
         public void setLeftPos(int x) { }
         @Override public int getRowLeft() { return 0; }
         public int getScrollbarPositionX() { return -10; } 
+        @Override protected void drawHeaderAndFooterSeparators(DrawContext context) {}
     }
     
     private abstract static class OptionEntry extends ElementListWidget.Entry<OptionEntry> {
         @Override
-        public void render(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
-            boolean isHovered = mouseX >= x && mouseX <= x + entryWidth && mouseY >= y - 1 && mouseY <= y + entryHeight + 2;
+        public void render(DrawContext context, int mouseX, int mouseY, boolean hovered, float delta) {
+            DamageConfigScreen screen = (DamageConfigScreen) MinecraftClient.getInstance().currentScreen;
+            if (screen == null || screen.optionList == null) return;
+            
+            int index = screen.optionList.children().indexOf(this);
+            if (index == -1) return;
+            
+            int y = screen.optionList.getRowTopPublic(index);
+            int x = screen.optionList.getRowLeft();
+            int entryWidth = screen.optionList.getRowWidth();
+            int entryHeight = 25; 
+            
+            boolean isHovered = mouseX >= x && mouseX <= x + entryWidth && mouseY >= y && mouseY < y + entryHeight;
             
             if (isHovered && shouldHighlight()) {
-                context.fill(x - 200, y - 1, x + entryWidth + 200, y + entryHeight + 2, 0x30FFFFFF);
+                context.fill(x - 200, y, x + entryWidth + 200, y + entryHeight, 0x30FFFFFF);
             }
-            renderContent(context, index, y, x, entryWidth, entryHeight, mouseX, mouseY, hovered, tickDelta);
+            renderContent(context, index, y, x, entryWidth, entryHeight, mouseX, mouseY, isHovered, delta);
         }
         
         public abstract void renderContent(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta);
         
         protected boolean shouldHighlight() { return true; }
+        
+        @Override
+        public boolean mouseClicked(Click click, boolean modifiers) {
+            double mouseX = MinecraftClient.getInstance().mouse.getX() * (double)MinecraftClient.getInstance().getWindow().getScaledWidth() / (double)MinecraftClient.getInstance().getWindow().getWidth();
+            double mouseY = MinecraftClient.getInstance().mouse.getY() * (double)MinecraftClient.getInstance().getWindow().getScaledHeight() / (double)MinecraftClient.getInstance().getWindow().getHeight();
+            int button = click.button();
+            
+            for (Element child : this.children()) {
+                if (child instanceof TextFieldWidget tf) {
+                    if (tf.isMouseOver(mouseX, mouseY)) {
+                        tf.setFocused(true);
+                        return true;
+                    } else {
+                        tf.setFocused(false);
+                    }
+                } else if (child.mouseClicked(click, modifiers)) {
+                    return true;
+                }
+            }
+            return false;
+        }
+        
+        @Override
+        public boolean mouseReleased(Click click) {
+            for (Element child : this.children()) {
+                if (child.mouseReleased(click)) {
+                    return true;
+                }
+            }
+            return false;
+        }
+        
+        @Override
+        public boolean mouseDragged(Click click, double deltaX, double deltaY) {
+            for (Element child : this.children()) {
+                if (child.mouseDragged(click, deltaX, deltaY)) {
+                    return true;
+                }
+            }
+            return false;
+        }
+                  
+        @Override
+        public boolean keyPressed(KeyInput keyInput) {
+            for (Element child : this.children()) {
+                if (child.keyPressed(keyInput)) {
+                    return true;
+                }
+            }
+            return false;
+        }
+        
+        @Override
+        public boolean charTyped(CharInput charInput) {
+            for (Element child : this.children()) {
+                if (child.charTyped(charInput)) {
+                    return true;
+                }
+            }
+            return false;
+        }
+        
+        @Override
+        public boolean keyReleased(KeyInput keyInput) {
+             for (Element child : this.children()) {
+                if (child.keyReleased(keyInput)) {
+                    return true;
+                }
+            }
+            return false;
+        }
     }
     
     private class ConfigOptionListWidget extends ElementListWidget<OptionEntry> {
         private double targetScroll = 0;
         private boolean isSmoothScrolling = false;
+        private boolean scrolling = false;
 
         public ConfigOptionListWidget(MinecraftClient client, int width, int height, int y, int itemHeight) {
             super(client, width, height, y, 26);
-            this.centerListVertically = false;
         }
         
-        public int getHoveredEntryIndex(double mouseX, double mouseY) {
+        public boolean isScrolling() { return scrolling; }
+        
+        @Override
+        public boolean mouseClicked(Click click, boolean modifiers) {
+            double mouseX = MinecraftClient.getInstance().mouse.getX() * (double)client.getWindow().getScaledWidth() / (double)client.getWindow().getWidth();
+            double mouseY = MinecraftClient.getInstance().mouse.getY() * (double)client.getWindow().getScaledHeight() / (double)client.getWindow().getHeight();
+            
+            if (mouseX >= getScrollbarX() && mouseX <= getScrollbarX() + 6) {
+                 scrolling = true;
+            }
+            return super.mouseClicked(click, modifiers);
+        }
+        
+        @Override
+        public boolean mouseReleased(Click click) {
+            scrolling = false;
+            return super.mouseReleased(click);
+        }
+        
+        @Override
+        protected void drawMenuListBackground(DrawContext context) {
+        }
+        
+        public int getRowTopPublic(int index) {
+             return this.getY() + index * this.itemHeight - (int)this.getScrollY();
+        }
 
+        public int getHoveredEntryIndex(double mouseX, double mouseY) {
              if (mouseX < this.getX() || mouseX > this.getRight() || mouseY < this.getY() || mouseY > this.getBottom()) {
                  return -1;
              }
-             
-             int i = MathHelper.floor(mouseY - (double)this.getY() - this.headerHeight + this.getScrollAmount() - 4.0D);
-
+             int i = MathHelper.floor(mouseY - (double)this.getY() - 0 + this.getScrollY() - 4.0D);
              int index = i / 26;
              if (index >= 0 && index < this.getEntryCount()) {
                  return index;
@@ -472,110 +839,66 @@ public class DamageConfigScreen extends Screen {
         public void setLeftPos(int x) { 
             this.setX(x);
         }
-        @Override public int getRowLeft() { return this.getX() + 10; }
-        public int getScrollbarPositionX() { return this.client.getWindow().getScaledWidth() - 6; }
-        
+        @Override
+        public int getRowLeft() { return this.getX() + 10; }
+        public int getScrollbarX() { return this.getRight() - 6; }
         
         @Override
+        protected void drawHeaderAndFooterSeparators(DrawContext context) {}
+        
+        @Override
+        public boolean mouseDragged(Click click, double deltaX, double deltaY) {
+             return super.mouseDragged(click, deltaX, deltaY);
+        }
+        
         public void renderWidget(DrawContext context, int mouseX, int mouseY, float delta) {
              this.enableScissor(context);
              this.renderList(context, mouseX, mouseY, delta);
              context.disableScissor();
              
-             int scrollbarX = this.getScrollbarPositionX();
+             int scrollbarX = this.getScrollbarX();
              int scrollbarY = this.getY();
              int scrollbarHeight = this.getHeight();
-             int contentHeight = this.getMaxScroll() + this.getHeight();
+             int contentHeight = this.getMaxScrollY() + this.getHeight();
              
              if (contentHeight > this.getHeight()) {
                  int barHeight = (int)((float)(this.getHeight() * this.getHeight()) / (float)contentHeight);
                  barHeight = Math.max(32, barHeight);
                  if (barHeight > this.getHeight()) barHeight = this.getHeight();
                  
-                 int barTop = (int)this.getScrollAmount() * (this.getHeight() - barHeight) / (this.getMaxScroll()) + this.getY();
+                 int barTop = (int)this.getScrollY() * (this.getHeight() - barHeight) / (this.getMaxScrollY()) + this.getY();
                  if (barTop < this.getY()) barTop = this.getY();
                  
-                context.fill(scrollbarX, scrollbarY, scrollbarX + 6, scrollbarY + scrollbarHeight, 0x80000000);
-                
-                context.fill(scrollbarX, barTop, scrollbarX + 6, barTop + barHeight, 0xA0FFFFFF);
+                 context.fill(scrollbarX, scrollbarY, scrollbarX + 6, scrollbarY + scrollbarHeight, 0x80000000);
+                 context.fill(scrollbarX, barTop, scrollbarX + 6, barTop + barHeight, 0xA0FFFFFF);
             }
        }
-        
-        @Override
-        protected void drawHeaderAndFooterSeparators(DrawContext context) {}
-        
-        @Override
-        public boolean mouseClicked(double mouseX, double mouseY, int button) {
-            int scrollbarX = this.getScrollbarPositionX();
-            if (mouseX >= scrollbarX - 10) {
-                DamageConfigScreen.this.isNavigating = false;
-                return true;
-            }
-            return super.mouseClicked(mouseX, mouseY, button);
-        }
 
-        @Override
         public boolean mouseScrolled(double mouseX, double mouseY, double horizontalAmount, double verticalAmount) {
             DamageConfigScreen.this.isNavigating = false;
-            this.targetScroll = this.getScrollAmount() - verticalAmount * 80.0;
-            this.targetScroll = Math.max(0, Math.min(this.targetScroll, this.getMaxScroll()));
+            this.targetScroll = this.getScrollY() - verticalAmount * 80.0;
+            this.targetScroll = Math.max(0, Math.min(this.targetScroll, this.getMaxScrollY()));
             this.isSmoothScrolling = true;
             return true;
         }
         
-        @Override
-        public boolean mouseDragged(double mouseX, double mouseY, int button, double deltaX, double deltaY) {
-            int contentHeight = this.getMaxScroll() + this.getHeight();
-            if (contentHeight > this.getHeight()) {
-                 int scrollbarX = this.getScrollbarPositionX();
-                 if (draggingScrollbar || (mouseX >= scrollbarX - 10)) {
-                     DamageConfigScreen.this.isNavigating = false;
-                     draggingScrollbar = true;
-                     double scrollFactor = (double)this.getMaxScroll() / (double)(this.getHeight() - 26);
-                     
-                     double barHeight = (double)(this.getHeight() * this.getHeight()) / (double)contentHeight;
-                     barHeight = Math.max(32, barHeight);
-                     double trackHeight = this.getHeight() - barHeight;
-                     
-                     if (trackHeight > 0) {
-                         double scrollPerPixel = this.getMaxScroll() / trackHeight;
-                         
-                         double newScroll = this.getScrollAmount() + deltaY * scrollPerPixel;
-                         this.setScrollAmount(newScroll);
-                         this.targetScroll = newScroll;
-                         this.isSmoothScrolling = false;
-                         return true;
-                     }
-                 }
-            }
-            return super.mouseDragged(mouseX, mouseY, button, deltaX, deltaY);
-        }
-        
-        private boolean draggingScrollbar = false;
-        
-        @Override
-        public boolean mouseReleased(double mouseX, double mouseY, int button) {
-            draggingScrollbar = false;
-            return super.mouseReleased(mouseX, mouseY, button);
-        }
-        
         public void setTargetScroll(double scroll) {
-            this.targetScroll = Math.max(0, Math.min(scroll, this.getMaxScroll()));
+            this.targetScroll = Math.max(0, Math.min(scroll, this.getMaxScrollY()));
             this.isSmoothScrolling = true;
         }
         
         public void updateSmoothScroll(float delta) {
             if (isSmoothScrolling) {
-                double current = this.getScrollAmount();
+                double current = this.getScrollY();
                 if (Math.abs(current - targetScroll) < 0.5) {
-                    this.setScrollAmount(targetScroll);
+                    this.setScrollY(targetScroll);
                     isSmoothScrolling = false;
                     DamageConfigScreen.this.isNavigating = false;
                 } else {
-                    this.setScrollAmount(MathHelper.lerp(0.5f * delta, current, targetScroll));
+                    this.setScrollY(MathHelper.lerp(0.5f * delta, current, targetScroll));
                 }
             } else {
-                targetScroll = this.getScrollAmount();
+                targetScroll = this.getScrollY();
                 DamageConfigScreen.this.isNavigating = false;
             }
         }
@@ -590,14 +913,14 @@ public class DamageConfigScreen extends Screen {
         protected boolean shouldHighlight() { return false; }
         @Override
         public void renderContent(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
-            context.drawCenteredTextWithShadow(client.textRenderer, text, x + entryWidth / 2, y + 9, 0xFFFFFF);
+            context.drawCenteredTextWithShadow(client.textRenderer, text, x + entryWidth / 2, y + 9, 0xFFFFFFFF);
         }
         @Override public List<? extends Element> children() { return Collections.emptyList(); }
         @Override public List<? extends Selectable> selectableChildren() { return Collections.emptyList(); }
     }
 
     private static class BooleanOptionEntry extends OptionEntry {
-        private final ButtonWidget button;
+        private final StyledButton button;
         private final Text label;
         private boolean state;
         private final MinecraftClient client = MinecraftClient.getInstance();
@@ -612,15 +935,17 @@ public class DamageConfigScreen extends Screen {
             int onColor = 0xFFB5F0C6;
             int offColor = 0xFFFC887E;
             
-            this.button = ButtonWidget.builder(Text.translatable(state ? "options.on" : "options.off").withColor(state ? onColor : offColor), b -> {
+            final StyledButton[] btnRef = new StyledButton[1];
+            btnRef[0] = new StyledButton(0, 0, 100, 20, Text.translatable(state ? "options.on" : "options.off").withColor(state ? onColor : offColor), () -> {
                 state = !state;
-                b.setMessage(Text.translatable(state ? "options.on" : "options.off").withColor(state ? onColor : offColor));
+                btnRef[0].setMessage(Text.translatable(state ? "options.on" : "options.off").withColor(state ? onColor : offColor));
                 onToggle.accept(state);
-            }).dimensions(0, 0, 100, 20).build();
+            });
+            this.button = btnRef[0];
         }
         @Override
         public void renderContent(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
-            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFF);
+            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFFFF);
             button.setX(x + entryWidth - 110);
             button.setY(y + 2);
             button.setFocused(false); 
@@ -630,21 +955,78 @@ public class DamageConfigScreen extends Screen {
         @Override public List<? extends Selectable> selectableChildren() { return Collections.singletonList(button); }
     }
     
+    private static class StyledSliderWidget extends SliderWidget {
+        private final boolean showValue;
+        
+        public StyledSliderWidget(int x, int y, int width, int height, Text text, double value, boolean showValue) {
+            super(x, y, width, height, text, value);
+            this.showValue = showValue;
+        }
+        
+        @Override
+        protected void updateMessage() {} 
+        
+        @Override
+        protected void applyValue() {} 
+
+        @Override
+        public void playDownSound(net.minecraft.client.sound.SoundManager soundManager) {
+             if (MinecraftClient.getInstance().currentScreen instanceof DamageConfigScreen s) {
+                 s.playClickSound();
+             } else {
+                 super.playDownSound(soundManager);
+             }
+        }
+        
+        @Override
+        public void renderWidget(DrawContext context, int mouseX, int mouseY, float delta) {
+            int x = getX();
+            int y = getY();
+            int w = getWidth();
+            int h = getHeight();
+            
+            context.fill(x, y, x + w, y + h, 0x20000000);
+            
+            int borderColor = isHovered() ? 0xFFFFFFFF : 0xFFA0A0A0;
+            context.fill(x, y, x + w, y + 1, borderColor); 
+            context.fill(x, y + h - 1, x + w, y + h, borderColor); 
+            context.fill(x, y, x + 1, y + h, borderColor); 
+            context.fill(x + w - 1, y, x + w, y + h, borderColor); 
+            
+            int handleWidth = 8;
+            int handleX = x + (int)(this.value * (double)(w - handleWidth));
+            int handleY = y;
+            
+            int handleBorderColor = (isHovered() || isFocused()) ? 0xFFFFFFFF : 0xFFCCCCCC;
+            
+            context.fill(handleX, handleY, handleX + handleWidth, handleY + h, 0xFF000000); 
+            
+            context.fill(handleX, handleY, handleX + handleWidth, handleY + 1, handleBorderColor);
+            context.fill(handleX, handleY + h - 1, handleX + handleWidth, handleY + h, handleBorderColor);
+            context.fill(handleX, handleY, handleX + 1, handleY + h, handleBorderColor);
+            context.fill(handleX + handleWidth - 1, handleY, handleX + handleWidth, handleY + h, handleBorderColor);
+            
+            if (showValue) {
+                context.drawCenteredTextWithShadow(MinecraftClient.getInstance().textRenderer, getMessage(), x + w / 2, y + (h - 8) / 2, 0xFFFFFFFF);
+            }
+        }
+    }
+
     private static class SliderEntry extends OptionEntry {
-        private final SliderWidget slider;
+        private final StyledSliderWidget slider;
         private final Text label;
         private final MinecraftClient client = MinecraftClient.getInstance();
         
         public SliderEntry(String key, float current, float min, float max, Consumer<Float> onChange) {
             this.label = Text.translatable(key);
-            this.slider = new SliderWidget(0, 0, 100, 20, Text.literal(String.format("%.1f", current)), (current - min) / (max - min)) {
+            this.slider = new StyledSliderWidget(0, 0, 100, 20, Text.literal(String.format("%.1f", current)), (current - min) / (max - min), true) {
                 @Override protected void updateMessage() { this.setMessage(Text.literal(String.format("%.1f", min + this.value * (max - min)))); }
                 @Override protected void applyValue() { onChange.accept((float)(min + this.value * (max - min))); }
             };
         }
         @Override
         public void renderContent(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
-            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFF);
+            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFFFF);
             slider.setX(x + entryWidth - 110);
             slider.setY(y + 2);
             slider.render(context, mouseX, mouseY, tickDelta);
@@ -654,7 +1036,7 @@ public class DamageConfigScreen extends Screen {
     }
 
     private static class IntegerSliderEntry extends OptionEntry {
-        private final SliderWidget slider;
+        private final StyledSliderWidget slider;
         private final Text label;
         private final MinecraftClient client = MinecraftClient.getInstance();
         
@@ -664,7 +1046,7 @@ public class DamageConfigScreen extends Screen {
             float maxF = (float)max;
             float currentF = (float)current;
             
-            this.slider = new SliderWidget(0, 0, 100, 20, Text.literal(String.valueOf(current)), (currentF - minF) / (maxF - minF)) {
+            this.slider = new StyledSliderWidget(0, 0, 100, 20, Text.literal(String.valueOf(current)), (currentF - minF) / (maxF - minF), true) {
                 @Override protected void updateMessage() { 
                     int val = (int)Math.round(minF + this.value * (maxF - minF));
                     this.setMessage(Text.literal(String.valueOf(val))); 
@@ -677,7 +1059,7 @@ public class DamageConfigScreen extends Screen {
         }
         @Override
         public void renderContent(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
-            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFF);
+            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFFFF);
             slider.setX(x + entryWidth - 110);
             slider.setY(y + 2);
             slider.render(context, mouseX, mouseY, tickDelta);
@@ -687,7 +1069,7 @@ public class DamageConfigScreen extends Screen {
     }
     
     private class ResetButtonEntry extends OptionEntry {
-        private final ButtonWidget button;
+        private final StyledButton button;
         private final Runnable onReset;
         private final Text label;
         private final MinecraftClient client = MinecraftClient.getInstance();
@@ -705,8 +1087,7 @@ public class DamageConfigScreen extends Screen {
                  btnText = Text.translatable("text.damage-engine.reset_done");
             }
             
-            this.button = ButtonWidget.builder(btnText.copy().withColor(color), b -> handleClick())
-                .dimensions(0, 0, 100, 20).build();
+            this.button = new StyledButton(0, 0, 100, 20, btnText.copy().withColor(color), () -> handleClick());
         }
         
         private void handleClick() {
@@ -730,10 +1111,10 @@ public class DamageConfigScreen extends Screen {
                     button.setMessage(Text.translatable("gui.reset").withColor(0xFFFC887E));
                 }
             } else if (resetButtonState == 1) {
-                 if (System.currentTimeMillis() - resetButtonActionTime > 5000) {
-                     resetButtonState = 0;
-                     button.setMessage(Text.translatable("gui.reset").withColor(0xFFFC887E));
-                 }
+                if (System.currentTimeMillis() - resetButtonActionTime > 5000) {
+                    resetButtonState = 0;
+                    button.setMessage(Text.translatable("gui.reset").withColor(0xFFFC887E));
+                }
             }
             
             context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFC887E);
@@ -748,7 +1129,7 @@ public class DamageConfigScreen extends Screen {
     }
     
     private static class ExpandableHeaderEntry extends OptionEntry {
-        private final ButtonWidget button;
+        private final PlainTextButton button;
         private final Text label;
         private final MinecraftClient client = MinecraftClient.getInstance();
         private boolean expanded;
@@ -759,8 +1140,7 @@ public class DamageConfigScreen extends Screen {
             this.expanded = expanded;
             this.onToggle = onToggle;
             
-            this.button = ButtonWidget.builder(Text.empty(), b -> onToggle.accept(!expanded))
-                .dimensions(0, 0, 20, 20).build();
+            this.button = new PlainTextButton(0, 0, 20, 20, Text.literal(expanded ? "-" : "+"), () -> onToggle.accept(!expanded), 0xFFFFFFFF, 0xFFFBFB54);
         }
         
         @Override
@@ -773,21 +1153,25 @@ public class DamageConfigScreen extends Screen {
             button.setX(x + entryWidth - 25);
             button.setY(y + 2);
             button.setFocused(false);
-            
-            String symbol = expanded ? "-" : "+";
-            int symWidth = client.textRenderer.getWidth(symbol);
-            
-            context.drawTextWithShadow(client.textRenderer, symbol, button.getX() + 10 - symWidth/2, button.getY() + 6, color);
+            button.setForceHover(isHovered);
+            button.render(context, mouseX, mouseY, tickDelta);
         }
         
-        @Override 
-        public boolean mouseClicked(double mouseX, double mouseY, int button) {
-            if (button == 0) {
-                this.onToggle.accept(!expanded);
-                client.getSoundManager().play(net.minecraft.client.sound.PositionedSoundInstance.master(net.minecraft.sound.SoundEvents.UI_BUTTON_CLICK, 1.0F));
-                return true;
-            }
-            return false;
+        @Override
+        public boolean mouseClicked(Click click, boolean modifiers) {
+             if (this.button.mouseClicked(click, modifiers)) return true;
+             
+             double mouseX = MinecraftClient.getInstance().mouse.getX() * (double)client.getWindow().getScaledWidth() / (double)client.getWindow().getWidth();
+             double mouseY = MinecraftClient.getInstance().mouse.getY() * (double)client.getWindow().getScaledHeight() / (double)client.getWindow().getHeight();
+             
+             if (this.onToggle != null) {
+                 this.onToggle.accept(!expanded);
+                 if (MinecraftClient.getInstance().currentScreen instanceof DamageConfigScreen s) {
+                     s.playClickSound();
+                 }
+                 return true;
+             }
+             return false;
         }
         
         @Override public List<? extends Element> children() { return Collections.singletonList(button); }
@@ -797,7 +1181,7 @@ public class DamageConfigScreen extends Screen {
     private static class DamageThresholdEntry extends OptionEntry {
         private final TextFieldWidget valField;
         private final TextFieldWidget colField;
-        private final ButtonWidget delBtn;
+        private final PlainTextButton delBtn;
         private final MinecraftClient client = MinecraftClient.getInstance();
         private int currentColor;
         
@@ -805,12 +1189,14 @@ public class DamageConfigScreen extends Screen {
             this.currentColor = dt.color;
             
             this.valField = new TextFieldWidget(client.textRenderer, 0, 0, 40, 20, Text.empty());
+            this.valField.setDrawsBackground(false);
             this.valField.setText(String.format("%.0f", dt.threshold));
             this.valField.setChangedListener(s -> {
                 try { dt.threshold = Float.parseFloat(s); } catch(Exception ignored){}
             });
             
             this.colField = new TextFieldWidget(client.textRenderer, 0, 0, 55, 20, Text.empty());
+            this.colField.setDrawsBackground(false);
             this.colField.setMaxLength(7);
             this.colField.setText("#" + String.format("%06X", dt.color & 0xFFFFFF));
             this.colField.setChangedListener(s -> {
@@ -822,32 +1208,63 @@ public class DamageConfigScreen extends Screen {
                 } catch(Exception ignored){}
             });
             
-            this.delBtn = new TextButtonWidget(0, 0, 20, 20, Text.literal("-"), b -> onDelete.run(), 0xFFFFFFFF, 0xFFFBFB54);
+            this.delBtn = new PlainTextButton(0, 0, 20, 20, Text.literal("-"), onDelete, 0xFFFFFFFF, 0xFFFBFB54);
         }
         
         @Override
         public void renderContent(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
             int rightX = x + entryWidth;
             
-            delBtn.setX(rightX - 25);
+            delBtn.setX(rightX - 25); 
             delBtn.setY(y + 2);
+            delBtn.setWidth(20);
+            delBtn.setForceHover(hovered);
             
             int previewSize = 18;
             int previewX = rightX - 25 - 5 - previewSize;
             int previewY = y + 2 + 1;
             
-            colField.setX(previewX - 5 - 55);
-            colField.setY(y + 2);
-            colField.setWidth(55);
+            int colBoxW = 55;
+            int colBoxX = previewX - 5 - colBoxW;
+            int colBoxY = y + 2;
+            int colBoxH = 20;
             
-            valField.setX(colField.getX() - 5 - 40);
-            valField.setY(y + 2);
+            colField.setX(colBoxX + 4);
+            colField.setY(colBoxY + 6);
+            colField.setWidth(colBoxW - 8);
+            colField.setHeight(12);
+            
+            int valBoxW = 40;
+            int valBoxX = colBoxX - 5 - valBoxW;
+            int valBoxY = y + 2;
+            int valBoxH = 20;
+            
+            valField.setX(valBoxX + 4);
+            valField.setY(valBoxY + 6);
+            valField.setWidth(valBoxW - 8);
+            valField.setHeight(12); 
             
             Text label = Text.translatable("text.damage-engine.damage_reach");
             
-            int labelColor = hovered ? 0xFFFBFB54 : 0xFFFFFFFF;
+            int labelColor = 0xFFFFFFFF; 
             
             context.drawTextWithShadow(client.textRenderer, label, x + 10, y + 8, labelColor);
+            
+            context.fill(valBoxX, valBoxY, valBoxX + valBoxW, valBoxY + valBoxH, 0x20000000);
+            int vx = valBoxX, vy = valBoxY, vw = valBoxW, vh = valBoxH;
+            int valBorderColor = (valField.isFocused() || valField.isMouseOver(mouseX, mouseY)) ? 0xFFFFFFFF : 0xFFA0A0A0;
+            context.fill(vx, vy, vx + vw, vy + 1, valBorderColor);
+            context.fill(vx, vy + vh - 1, vx + vw, vy + vh, valBorderColor);
+            context.fill(vx, vy, vx + 1, vy + vh, valBorderColor);
+            context.fill(vx + vw - 1, vy, vx + vw, vy + vh, valBorderColor);
+            
+            context.fill(colBoxX, colBoxY, colBoxX + colBoxW, colBoxY + colBoxH, 0x20000000);
+            int cx = colBoxX, cy = colBoxY, cw = colBoxW, ch = colBoxH;
+            int colBorderColor = (colField.isFocused() || colField.isMouseOver(mouseX, mouseY)) ? 0xFFFFFFFF : 0xFFA0A0A0;
+            context.fill(cx, cy, cx + cw, cy + 1, colBorderColor);
+            context.fill(cx, cy + ch - 1, cx + cw, cy + ch, colBorderColor);
+            context.fill(cx, cy, cx + 1, cy + ch, colBorderColor);
+            context.fill(cx + cw - 1, cy, cx + cw, cy + ch, colBorderColor);
             
             valField.render(context, mouseX, mouseY, tickDelta);
             colField.render(context, mouseX, mouseY, tickDelta);
@@ -856,18 +1273,26 @@ public class DamageConfigScreen extends Screen {
             context.fill(previewX - 1, previewY - 1, previewX + previewSize + 1, previewY + previewSize + 1, 0xFFFFFFFF);
             context.fill(previewX, previewY, previewX + previewSize, previewY + previewSize, 0xFF000000 | (currentColor & 0xFFFFFF));
         }
-        @Override public List<? extends Element> children() { return List.of(valField, colField, delBtn); }
-        @Override public List<? extends Selectable> selectableChildren() { return List.of(valField, colField, delBtn); }
+        
+        @Override
+        public List<? extends Element> children() {
+            return java.util.Arrays.asList(valField, colField, delBtn);
+        }
+        
+        @Override
+        public List<? extends Selectable> selectableChildren() {
+            return java.util.Arrays.asList(valField, colField, delBtn);
+        }
     }
 
     private static class AddButtonEntry extends OptionEntry {
-        private final ButtonWidget button;
+        private final PlainTextButton button;
         private final MinecraftClient client = MinecraftClient.getInstance();
         private final Runnable action;
         
         public AddButtonEntry(Runnable action) {
             this.action = action;
-            this.button = new TextButtonWidget(0, 0, 20, 20, Text.literal("+"), b -> action.run(), 0xFFFFFFFF, 0xFFFBFB54);
+            this.button = new PlainTextButton(0, 0, 20, 20, Text.literal("+"), action, 0xFFFFFFFF, 0xFFFBFB54);
         }
         
         @Override
@@ -875,40 +1300,26 @@ public class DamageConfigScreen extends Screen {
             int rightX = x + entryWidth;
             button.setX(rightX - 25);
             button.setY(y + 2);
-            
-            boolean isHovered = hovered || (mouseX >= x && mouseX <= x + entryWidth && mouseY >= y && mouseY <= y + entryHeight);
-            int color = isHovered ? 0xFFFBFB54 : 0xFFFFFFFF;
-            
-            String symbol = "+";
-            int symWidth = client.textRenderer.getWidth(symbol);
-            context.drawTextWithShadow(client.textRenderer, symbol, button.getX() + 10 - symWidth/2, button.getY() + 6, color);
+            button.setFocused(false);
+            button.setForceHover(hovered);
+            button.render(context, mouseX, mouseY, tickDelta);
         }
         
-        @Override
-        public boolean mouseClicked(double mouseX, double mouseY, int button) {
-             if (button == 0) {
-                 this.action.run();
-                 client.getSoundManager().play(net.minecraft.client.sound.PositionedSoundInstance.master(net.minecraft.sound.SoundEvents.UI_BUTTON_CLICK, 1.0F));
-                 return true;
-             }
-             return false;
-        }
-        
-        @Override public List<? extends Element> children() { return Collections.emptyList(); }
-        @Override public List<? extends Selectable> selectableChildren() { return Collections.emptyList(); }
+        @Override public List<? extends Element> children() { return Collections.singletonList(button); }
+        @Override public List<? extends Selectable> selectableChildren() { return Collections.singletonList(button); }
     }
-
+    
     private static class ButtonActionEntry extends OptionEntry {
-        private final ButtonWidget button;
+        private final StyledButton button;
         private final Text label;
         private final MinecraftClient client = MinecraftClient.getInstance();
         public ButtonActionEntry(String labelKey, String buttonKey, Runnable action) {
             this.label = Text.translatable(labelKey); 
-            this.button = ButtonWidget.builder(Text.translatable(buttonKey), b -> action.run()).dimensions(0, 0, 100, 20).build();
+            this.button = new StyledButton(0, 0, 100, 20, Text.translatable(buttonKey), action);
         }
         @Override
         public void renderContent(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
-            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFF);
+            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFFFF);
             button.setX(x + entryWidth - 110);
             button.setY(y + 2);
             button.setFocused(false);
@@ -916,11 +1327,6 @@ public class DamageConfigScreen extends Screen {
         }
         @Override public List<? extends Element> children() { return Collections.singletonList(button); }
         @Override public List<? extends Selectable> selectableChildren() { return Collections.singletonList(button); }
-        @Override
-        public boolean mouseClicked(double mouseX, double mouseY, int button) {
-            if (this.button.mouseClicked(mouseX, mouseY, button)) return true;
-            return super.mouseClicked(mouseX, mouseY, button);
-        }
     }
     
     private static class NumericEntry extends OptionEntry {
@@ -930,14 +1336,32 @@ public class DamageConfigScreen extends Screen {
         public NumericEntry(String key, float initial, Consumer<Float> onChange) {
             this.label = Text.translatable(key);
             this.field = new TextFieldWidget(client.textRenderer, 0, 0, 100, 20, Text.empty());
+            this.field.setDrawsBackground(false);
             this.field.setText(String.valueOf(initial));
             this.field.setChangedListener(s -> { try { onChange.accept(Float.parseFloat(s)); } catch(Exception ignored){} });
         }
         @Override
         public void renderContent(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
-            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFF);
-            field.setX(x + entryWidth - 110);
-            field.setY(y + 2);
+            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFFFF);
+            
+            int boxX = x + entryWidth - 110;
+            int boxY = y + 2;
+            int boxW = 100;
+            int boxH = 20;
+            
+            field.setX(boxX + 4);
+            field.setY(boxY + 6);
+            field.setWidth(boxW - 8);
+            field.setHeight(12);
+            
+            context.fill(boxX, boxY, boxX + boxW, boxY + boxH, 0x20000000);
+            int fx = boxX, fy = boxY, fw = boxW, fh = boxH;
+            int borderColor = (field.isFocused() || field.isMouseOver(mouseX, mouseY)) ? 0xFFFFFFFF : 0xFFA0A0A0;
+            context.fill(fx, fy, fx + fw, fy + 1, borderColor);
+            context.fill(fx, fy + fh - 1, fx + fw, fy + fh, borderColor);
+            context.fill(fx, fy, fx + 1, fy + fh, borderColor);
+            context.fill(fx + fw - 1, fy, fx + fw, fy + fh, borderColor);
+            
             field.render(context, mouseX, mouseY, tickDelta);
         }
         @Override public List<? extends Element> children() { return Collections.singletonList(field); }
@@ -954,6 +1378,7 @@ public class DamageConfigScreen extends Screen {
             this.label = Text.translatable(key);
             this.currentColor = initial;
             this.field = new TextFieldWidget(client.textRenderer, 0, 0, 75, 20, Text.empty());
+            this.field.setDrawsBackground(false);
             this.field.setMaxLength(7);
             this.field.setText("#" + String.format("%06X", initial & 0xFFFFFF));
             this.field.setChangedListener(s -> { 
@@ -967,13 +1392,27 @@ public class DamageConfigScreen extends Screen {
         }
         @Override
         public void renderContent(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
-            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFF);
+            context.drawTextWithShadow(client.textRenderer, label, x, y + 8, 0xFFFFFFFF);
             
             int startX = x + entryWidth - 110;
+            int boxX = startX;
+            int boxY = y + 2;
+            int boxW = 75;
+            int boxH = 20;
             
-            field.setX(startX);
-            field.setY(y + 2);
-            field.setWidth(75);
+            field.setX(boxX + 4);
+            field.setY(boxY + 6);
+            field.setWidth(boxW - 8);
+            field.setHeight(12);
+            
+            context.fill(boxX, boxY, boxX + boxW, boxY + boxH, 0x20000000);
+            int fx = boxX, fy = boxY, fw = boxW, fh = boxH;
+            int borderColor = (field.isFocused() || field.isMouseOver(mouseX, mouseY)) ? 0xFFFFFFFF : 0xFFA0A0A0;
+            context.fill(fx, fy, fx + fw, fy + 1, borderColor);
+            context.fill(fx, fy + fh - 1, fx + fw, fy + fh, borderColor);
+            context.fill(fx, fy, fx + 1, fy + fh, borderColor);
+            context.fill(fx + fw - 1, fy, fx + fw, fy + fh, borderColor);
+            
             field.render(context, mouseX, mouseY, tickDelta);
             
             int previewSize = 17;
@@ -997,7 +1436,7 @@ public class DamageConfigScreen extends Screen {
         protected boolean shouldHighlight() { return false; }
         @Override
         public void renderContent(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
-            context.drawTextWithShadow(client.textRenderer, text, x, y + 10, 0xFFFFFF);
+            context.drawTextWithShadow(client.textRenderer, text, x, y + 10, 0xFFFFFFFF);
         }
         @Override public List<? extends Element> children() { return Collections.emptyList(); }
         @Override public List<? extends Selectable> selectableChildren() { return Collections.emptyList(); }
@@ -1020,33 +1459,68 @@ public class DamageConfigScreen extends Screen {
         private final BindingButton button;
         private final KeyBinding keyBinding;
         
-        private class BindingButton extends ButtonWidget {
-            public BindingButton(int x, int y, int width, int height, Text message, PressAction onPress) {
-                super(x, y, width, height, message, onPress, DEFAULT_NARRATION_SUPPLIER);
+        private class BindingButton extends ClickableWidget {
+            private final Runnable onPress;
+
+            public BindingButton(int x, int y, int width, int height, Text message, Runnable onPress) {
+                super(x, y, width, height, message);
+                this.onPress = onPress;
             }
             
             @Override
+            public void playDownSound(net.minecraft.client.sound.SoundManager soundManager) {
+                if (MinecraftClient.getInstance().currentScreen instanceof DamageConfigScreen s) {
+                    s.playClickSound();
+                } else {
+                    super.playDownSound(soundManager);
+                }
+            }
+            
+            @Override
+            public boolean mouseClicked(Click click, boolean modifiers) {
+                 if (this.active && this.visible && click.button() == 0) {
+                     double mouseX = MinecraftClient.getInstance().mouse.getX() * (double)MinecraftClient.getInstance().getWindow().getScaledWidth() / (double)MinecraftClient.getInstance().getWindow().getWidth();
+                     double mouseY = MinecraftClient.getInstance().mouse.getY() * (double)MinecraftClient.getInstance().getWindow().getScaledHeight() / (double)MinecraftClient.getInstance().getWindow().getHeight();
+                     
+                     if (this.isMouseOver(mouseX, mouseY)) {
+                        this.playDownSound(MinecraftClient.getInstance().getSoundManager());
+                        this.onPress.run();
+                        return true;
+                     }
+                 }
+                 return false;
+            }
+            
+            @Override
+            protected void renderWidget(DrawContext context, int mouseX, int mouseY, float delta) {
+                context.fill(getX(), getY(), getX() + getWidth(), getY() + getHeight(), 0x20000000);
+                
+                int borderColor = isHovered() ? 0xFFFFFFFF : 0xFFA0A0A0;
+                int x = getX(); int y = getY(); int w = getWidth(); int h = getHeight();
+                context.fill(x, y, x + w, y + 1, borderColor); 
+                context.fill(x, y + h - 1, x + w, y + h, borderColor); 
+                context.fill(x, y, x + 1, y + h, borderColor); 
+                context.fill(x + w - 1, y, x + w, y + h, borderColor); 
+                
+                context.drawCenteredTextWithShadow(MinecraftClient.getInstance().textRenderer, getMessage(), getX() + getWidth() / 2, getY() + (getHeight() - 8) / 2, 0xFFFFFFFF);
+            }
+            
+            @Override
+            protected void appendClickableNarrations(NarrationMessageBuilder builder) {
+                this.appendDefaultNarrations(builder);
+            }
+            
             public boolean keyPressed(int keyCode, int scanCode, int modifiers) {
                 if (isBinding()) {
                     if (keyCode == GLFW.GLFW_KEY_ESCAPE) {
                         keyBinding.setBoundKey(InputUtil.UNKNOWN_KEY);
                     } else {
-                        keyBinding.setBoundKey(InputUtil.fromKeyCode(keyCode, scanCode));
+                        keyBinding.setBoundKey(InputUtil.Type.KEYSYM.createFromCode(keyCode));
                     }
                     finishBinding();
                     return true;
                 }
-                return super.keyPressed(keyCode, scanCode, modifiers);
-            }
-            
-            @Override
-            public boolean mouseClicked(double mouseX, double mouseY, int button) {
-                if (isBinding()) {
-                    keyBinding.setBoundKey(InputUtil.Type.MOUSE.createFromCode(button));
-                    finishBinding();
-                    return true;
-                }
-                return super.mouseClicked(mouseX, mouseY, button);
+                return false;
             }
         }
 
@@ -1056,7 +1530,7 @@ public class DamageConfigScreen extends Screen {
             this.label = Text.translatable(keyName);
             this.keyBinding = keyBinding;
             
-            this.button = new BindingButton(0, 0, 100, 20, Text.empty(), b -> {
+            this.button = new BindingButton(0, 0, 100, 20, net.minecraft.text.Text.literal("BIND"), () -> {
                 setBinding(true);
             });
             updateMessage();
@@ -1078,6 +1552,11 @@ public class DamageConfigScreen extends Screen {
             KeyBinding.updateKeysByCode();
         }
         
+        public void bindMouse(int button) {
+            keyBinding.setBoundKey(InputUtil.Type.MOUSE.createFromCode(button));
+            finishBinding();
+        }
+        
         private void updateMessage() {
             Text text;
             KeyBinding conflict = null;
@@ -1093,7 +1572,6 @@ public class DamageConfigScreen extends Screen {
                 } else {
                     MutableText keyText = keyBinding.getBoundKeyLocalizedText().copy();
                     
-                    // Check for conflicts
                     for (KeyBinding kb : MinecraftClient.getInstance().options.allKeys) {
                         if (kb != keyBinding && kb.equals(keyBinding)) {
                             conflict = kb;
@@ -1102,7 +1580,7 @@ public class DamageConfigScreen extends Screen {
                     }
                     
                     if (conflict != null) {
-                        text = Text.literal("[ ").withColor(0xFFFC887E).append(keyText.withColor(0xFFFFFFFF)).append(Text.literal(" ]").withColor(0xFFFC887E));
+                        text = Text.literal("[ ").withColor(0xFFFFFF55).append(keyText.withColor(0xFFFFFFFF)).append(Text.literal(" ]").withColor(0xFFFFFF55));
                     } else {
                         text = keyText;
                     }
@@ -1112,10 +1590,7 @@ public class DamageConfigScreen extends Screen {
             button.setMessage(text);
             
             if (conflict != null) {
-                MutableText conflictName = Text.translatable(conflict.getTranslationKey());
-                Text tooltipText = Text.translatable("text.damage-engine.key_conflict")
-                    .append(Text.literal("\n"))
-                    .append(conflictName);
+                Text tooltipText = Text.translatable("text.damage-engine.key_conflict");
                 button.setTooltip(Tooltip.of(tooltipText));
             } else {
                 button.setTooltip(null);
@@ -1124,10 +1599,13 @@ public class DamageConfigScreen extends Screen {
         
         @Override
         public void renderContent(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
-            context.drawTextWithShadow(MinecraftClient.getInstance().textRenderer, label, x, y + 8, 0xFFFFFF);
+            context.drawTextWithShadow(MinecraftClient.getInstance().textRenderer, label, x, y + 8, 0xFFFFFFFF);
+            
             button.setX(x + entryWidth - 110);
             button.setY(y + 2);
+            button.setWidth(100); 
             button.setFocused(false);
+            
             button.render(context, mouseX, mouseY, tickDelta);
         }
         
